[project]
name = "bank-marketing"
version = "1.0.0"
description = "Interpreting Bank Marketing Trends"
authors = [
    { name="Michael Varley", email="your.email@example.com" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",         # Optional: for better visualizations
]

[tool.setuptools]
packages = ["bank_marketing_project"]  # Replace with actual package dir if any

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"